--- a/proguard.cfg
+++ b/proguard.cfg
@@ -6,6 +6,7 @@
 -optimizations !code/simplification/arithmetic,!field/*,!class/merging/*
 
 -keep public class * extends android.app.Activity
+-keep public class * extends android.app.ListActivity
 -keep public class * extends android.app.Application
 -keep public class * extends android.app.Service
 -keep public class * extends android.content.BroadcastReceiver
@@ -37,4 +38,9 @@
 
 -keep class * implements android.os.Parcelable {
   public static final android.os.Parcelable$Creator *;
+}
+
+
+-keep class com.baidu.mobads.** {
+  public protected *;
 }
