--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,26 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mycompany.myapp5"
+    package="com.luoye.gifmaker"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.1" >
 
     <uses-sdk 
-        android:minSdkVersion="8" 
-        android:targetSdkVersion="21" />
-
+        android:minSdkVersion="6" 
+        android:targetSdkVersion="15" />
     <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+		android:theme="@style/AppTheme"
+        android:icon="@drawable/icon"
+        android:label="@string/app_name" >
         <activity
-            android:label="@string/app_name"
             android:name=".MainActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+		<activity
+            android:label="@string/app_name"
+            android:name=".HCActivity" >
+		</activity>
+		<activity
+            android:label="@string/app_name"
+            android:name=".FJActivity" >
+		</activity>
+		<activity
+			
+            android:label="@string/app_name"
+            android:name=".FileList" >
+		</activity>
+		<activity
+            android:label="查看图片"
+            android:name=".GifViewActivity" >
+		</activity>
+		<activity
+            android:name=".SettingActivity" >
+		</activity>
     </application>
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<!-- 以下为可选权限 -->
 
 </manifest>
