--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.luoye.gifmaker"
+    package="com.wocao.gifmaker"
     android:versionCode="4"
     android:versionName="1.11" >
 
