--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.wocao.gifmaker"
-    android:versionCode="4"
-    android:versionName="1.11" >
+    android:versionCode="5"
+    android:versionName="1.2" >
 
     <uses-sdk 
-        android:minSdkVersion="6" 
-        android:targetSdkVersion="15" />
+        android:minSdkVersion="11" 
+        android:targetSdkVersion="22" />
     <application
 		android:theme="@style/AppTheme"
         android:icon="@drawable/icon"
@@ -29,7 +29,7 @@
 		<activity
 			
             android:label="@string/app_name"
-            android:name=".FileList" >
+            android:name=".FileListAct" >
 		</activity>
 		<activity
             android:label="查看图片"
